--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
 
     <h1>Welcome to Your Budget Tracker!</h1>
     <p>This is a real HTML page served by Flask application.</p>
+    <a href="{{ url_for('register') }}">Go to Register Page</a>
 
 </body>
 </html>
