--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@
     {% if current_user.is_authenticated %}
 
         <h3>Hello, {{ current_user.username }}!</h3>
+
+        <a href="{{ url_for('categories') }}">Manage Categories</a> | 
+
         <a href="{{ url_for('logout') }}">Logout</a>
 
     {% else %}
