--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -65,6 +65,13 @@
                             </td>
                             <td>£{{ "%.2f"|format(transaction.amount) }}</td>
                             <td>
+                                <a href="{{ url_for('edit_transaction', transaction_id=transaction.id) }}" 
+                                    class="btn btn-primary btn-sm">
+                                    Edit
+                                </a>
+
+
+
                                 <form action="{{ url_for('delete_transaction', transaction_id=transaction.id) }}" method="POST" style="display:inline;">
                                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                                 </form>
